--- a/Challenge-Final/Challenge-Final/Base.lproj/Main.storyboard
+++ b/Challenge-Final/Challenge-Final/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="5Lb-di-r3L">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="3hs-8V-abz">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -164,7 +164,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <segue destination="Q8z-5s-6AC" kind="show" identifier="toMain" id="Qia-w2-jT0"/>
+                                    <action selector="next_button_action:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UAR-Qv-5xl"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -210,6 +210,11 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <navigationItem key="navigationItem" id="W4i-Zi-0ZE"/>
+                    <connections>
+                        <outlet property="email_label" destination="XTl-6v-oZu" id="iSC-ii-Cc2"/>
+                        <outlet property="password_label" destination="D0F-ik-q0a" id="G5g-us-fDe"/>
+                        <segue destination="Q8z-5s-6AC" kind="show" identifier="login_to_main" id="3tY-Rw-f85"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -270,7 +275,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="7wa-HU-97U">
-                                <rect key="frame" x="30" y="69" width="260" height="272.5"/>
+                                <rect key="frame" x="30" y="89" width="260" height="272.5"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4wN-sO-4we" customClass="SkyFloatingLabelTextField" customModule="SkyFloatingLabelTextField">
                                         <rect key="frame" x="0.0" y="0.0" width="260" height="45.5"/>
@@ -484,9 +489,12 @@
                                         <real key="value" value="20"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="signupButton:" destination="qH6-vk-sPU" eventType="touchUpInside" id="GfT-sp-Ytl"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Escolha seu avatar" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Op-nu-jnU">
-                                <rect key="frame" x="36" y="351.5" width="248" height="30"/>
+                                <rect key="frame" x="36" y="371.5" width="248" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="r81-9g-ga1"/>
                                 </constraints>
@@ -537,6 +545,7 @@
                         <outlet property="schoolTextField" destination="4wN-sO-4we" id="CWK-kb-EGX"/>
                         <outlet property="yearTextField" destination="q0T-Y9-NkG" id="0wC-Ds-mrU"/>
                         <segue destination="RlM-GU-Eyr" kind="presentation" identifier="toSchoolList" id="fcI-9R-KE2"/>
+                        <segue destination="Q8z-5s-6AC" kind="show" identifier="signupToMain" id="HHd-ok-M42"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5mf-Wt-XDX" sceneMemberID="firstResponder"/>
@@ -1251,4 +1260,7 @@
             <point key="canvasLocation" x="4316" y="-8"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="HHd-ok-M42"/>
+    </inferredMetricsTieBreakers>
 </document>
