--- a/Challenge-Final/Challenge-Final/CollectionViewCell.xib
+++ b/Challenge-Final/Challenge-Final/CollectionViewCell.xib
@@ -9,6 +9,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="HelveticaNeue.ttc">
+            <string>HelveticaNeue</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -19,28 +24,46 @@
                 <rect key="frame" x="0.0" y="0.0" width="140" height="150"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jlQ-lx-8F5">
-                        <rect key="frame" x="0.0" y="0.0" width="140" height="120"/>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VkE-qH-U7r">
-                        <rect key="frame" x="0.0" y="120" width="140" height="30"/>
+                    <view alpha="0.55000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B2n-it-iqu">
+                        <rect key="frame" x="0.0" y="0.0" width="140" height="150"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VkE-qH-U7r">
+                                <rect key="frame" x="0.0" y="120" width="140" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="6Gr-IY-khv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="19"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jlQ-lx-8F5">
+                                <rect key="frame" x="0.0" y="0.0" width="140" height="120"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="6Gr-IY-khv"/>
+                            <constraint firstAttribute="trailing" secondItem="jlQ-lx-8F5" secondAttribute="trailing" id="6jm-lr-XGK"/>
+                            <constraint firstItem="jlQ-lx-8F5" firstAttribute="top" secondItem="B2n-it-iqu" secondAttribute="top" id="GJb-ow-HFv"/>
+                            <constraint firstItem="jlQ-lx-8F5" firstAttribute="leading" secondItem="B2n-it-iqu" secondAttribute="leading" id="VbS-Iy-hAx"/>
+                            <constraint firstItem="VkE-qH-U7r" firstAttribute="top" secondItem="jlQ-lx-8F5" secondAttribute="bottom" id="ae5-XS-fOW"/>
+                            <constraint firstAttribute="bottom" secondItem="VkE-qH-U7r" secondAttribute="bottom" id="eKR-fs-d34"/>
+                            <constraint firstAttribute="trailing" secondItem="VkE-qH-U7r" secondAttribute="trailing" id="gQY-b4-c5z"/>
+                            <constraint firstItem="VkE-qH-U7r" firstAttribute="leading" secondItem="B2n-it-iqu" secondAttribute="leading" id="yuu-q0-T6T"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="20"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="jlQ-lx-8F5" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="1bG-94-Kd4"/>
-                <constraint firstItem="VkE-qH-U7r" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="59J-Mo-bZw"/>
-                <constraint firstAttribute="trailing" secondItem="jlQ-lx-8F5" secondAttribute="trailing" id="C0I-6I-i7H"/>
-                <constraint firstItem="jlQ-lx-8F5" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Qkb-bR-h48"/>
-                <constraint firstItem="VkE-qH-U7r" firstAttribute="top" secondItem="jlQ-lx-8F5" secondAttribute="bottom" id="R0N-ET-de6"/>
-                <constraint firstAttribute="trailing" secondItem="VkE-qH-U7r" secondAttribute="trailing" id="bx2-A1-NvU"/>
-                <constraint firstAttribute="bottom" secondItem="VkE-qH-U7r" secondAttribute="bottom" id="ma6-ox-yiN"/>
+                <constraint firstAttribute="trailing" secondItem="B2n-it-iqu" secondAttribute="trailing" id="GDO-bG-WHa"/>
+                <constraint firstItem="B2n-it-iqu" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="R9i-nj-9rQ"/>
+                <constraint firstAttribute="bottom" secondItem="B2n-it-iqu" secondAttribute="bottom" id="eFK-5Q-dBY"/>
+                <constraint firstItem="B2n-it-iqu" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="hPl-cp-dd9"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="140" height="150"/>
